- BusinessRelationPersonType (Changed)
    - Added new enum value "Other person mentioned by name"
- DSBPersonGroupsType (Changed)
    - removed properties "averageAgeMale" and "averageAgeFemale" (moved to OfferRequestDSBTye and OfferDSBType)
- DSBPersonType (Changed)
    - changed type of "netPremiumDSBPercentage", "netPremiumDSBMPercentage", "netPremiumDSBPPercentage" to percentageType.
- DSBPremiumType (Changed)
    - Properties "netPremiumDSBMPercentage", "netPremiumDSBMAmount", "netPremiumDSBPPercentage", "netPremiumDSBPAmount" are no longer mandatory
    - changed type of "netPremiumDSBMalePercentage", "netPremiumDSBFemalePercentage", "netPremiumDSBMPercentage", "netPremiumDSBPPercentage" to percentageType.
- InsuranceOptionsVariousType (Changed)
    - changed type of "surplusParticipationPremiumRate" and "surplusParticipationRate" to PercentageType.
- OfferDSBType (Changed)
    - added properties "averageAgeMale" and "averageAgeFemale" (moved from DSBPersonGroupsType)
- OfferNlpiDataType (changed)
    - property "companyLegalStatus" in "customer" is now optional
    - properties "UVGRiskNo" and "NogaCodeMain" in "customer" and "coInsuredCustomer" are now always optional
- OfferRequestDSBType (Changed)
    - added properties "averageAgeMale" and "averageAgeFemale" (moved from DSBPersonGroupsType)
- OfferUVGOType (Changed)
    - changed type of "instalmentSurchargePercentageUVGCompulsory" to PercentageType.
- PremiumOverviewType (Changed)
    - changed type of "instalmentSurchargePercentage", "combinationDiscountPercentage", "otherDiscountPercentage" to PercentageType.
- ProcessVersionConstType (Changed)
    - Updated const to version number 1.0.0
- SUVACompanyType (Changed)
    - changed type of premiumOASUVA and premiumNOASUVA to PercentageType
- UVGOPersonGroupPremiumType (Changed)
    - changed type of "premiumRiskRate", "costAdminRate", "sharingCostRate", "accidentPreventionContributionRate", "finalPremiumRate" to PercentageType.